Fix #36701: Mask pivioting doesnt honor parenting

Made mask transformation aware of parent matrix.