source/blender/blenkernel/BKE_mask.h
@@ -136,6 +136,7 @@ void BKE_mask_layer_calc_handles_deform(struct MaskLayer *masklay);
 void BKE_mask_calc_handles(struct Mask *mask);
 void BKE_mask_update_deform(struct Mask *mask);
 void BKE_mask_spline_ensure_deform(struct MaskSpline *spline);
+void BKE_mask_point_parent_matrix_get(struct MaskSplinePoint *point, float ctime, float parent_matrix[3][3]);
 
 /* animation */
 int  BKE_mask_layer_shape_totvert(struct MaskLayer *masklay);
